Added roles and permission to board controller